--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,10 @@
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
+/* protfolio */
+/* .protfoliotext{
+  text-transform:
+} */
 body {
   font-family: "Open Sans", sans-serif;
   color: #272829;
